coloquei links nos tons favoritos

--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -88,43 +88,43 @@
         </div>
         <div class="Jenifer">
             <h1 class="titulo">Jenifer</h1>
-            <ul><li>Eu navegarei - Em</li>
-                <li>Tudo é perda - C </li>
-                <li>Oceanos + Rendido estou - C</li>
-                <li>Os que esperam - D</li>
-                <li>Vem Espírito de Deus - E</li>
-                <li>Sopra Espírito - E</li>
-                <li>Em Espírito em verdade - E</li>
-                <li>Estamos de pé - A</li>
-                <li>Único - Tom - G</li>
-                <li>Que Ele cresça - G</li>
-                <li>Ele é exaltado - G</li>
-                <li>Milagres - Am</li>
-                <li>Caminho no deserto - Am</li>
-                <li>Em teu nome - G</li>
-                <li>Cadeias quebrar - Em</li>
-                <li>Clamo Jesus - Tom - E</li>
-                <li>Na unção de Deus + Deus dos deuses + Hino da vitória - C</li>
-                <li>Pai nosso - A</li>
-                <li>Quebrantado - C</li>
-                <li>Gratidão - D</li>
-                <li>Graças - Bm</li>
-                <li>Digno de honra - G</li>
-                <li>Eu me rendo - G</li>
-                <li>Aquele que está feliz - G</li>
-                <li>Meu prazer + Consagração + Aclame ao Senhor - E</li>
-                <li>Único + Que Ele cresça - G</li>
-                <li>O que tua glória fez comigo + Que Ele cresça - G</li>
-                <li>Tú És Santo - F</li>
-                <li>Digno é o Senhor - E</li>
-                <li>É ele - D</li>
-                <li>Hó quaão lindo esse nome é - D</li>
-                <li>Tu és - D</li>
-                <li>Nada mais - D</li>
-                <li>Escape - C</li>
-                <li>Inflama - E</li>
-                <li>Bom perfume + Manancial - D</li>
-                <li>Até que Ele venha + Rendido estou - </li>
+    <ul><li><a href="https://www.letras.mus.br/gabriela-rocha/eu-navegarei/" target="_blank">Eu navegarei</a> - Em</li>
+                <li><a href="https://www.cifraclub.com.br/felipe-rodrigues/tudo-e-perda/letra/" target="_blank">Tudo é perda</a> - C </li>
+                <li><a href="https://www.cifraclub.com.br/ana-nobrega/oceanos-rendido-estou/" target="_blank">Oceanos + Rendido estou</a> - C</li>
+                <li><a href="https://www.cifraclub.com.br/nivea-soares/os-que-esperam/letra/" target="_blank">Os que esperam</a> - D</li>
+                <li><a href="https://www.letras.mus.br/bruna-olly/vem-espirito-de-deus/" target="_blank">Vem Espírito de Deus</a> - E</li>
+                <li><a href="https://www.letras.mus.br/ludmila-ferber/287921/" target="_blank">Sopra Espírito</a> - E</li>
+                <li><a href="https://www.letras.mus.br/rosa-de-saron-musicas/1036064/" target="_blank"> Em Espírito em verdade</a> - E</li>
+                <li><a href="https://www.letras.mus.br/marcus-salles/estamos-de-pe/" target="_blank"> Estamos de pé</a> - A</li>
+                <li><a href="https://www.letras.mus.br/florianopolis-house-of-prayer/unico-part-marco-telles/" target="_blank">Único</a> - G</li>
+                <li><a href="https://www.letras.mus.br/deigma-marques/1893020/" target="_blank">Que Ele cresça</a> - G</li>
+                <li><a href="https://www.letras.mus.br/adhemar-de-campos/205379/" target="_blank">Ele é exaltado</a> - G</li>
+                <li><a href="https://www.letras.mus.br/livres-para-adorar/milagres/" target="_blank"> Milagres</a> - Am</li>
+                <li><a href="https://www.letras.mus.br/soraya-moraes/caminho-no-deserto-way-maker/" target="_blank">Caminho no deserto</a> - Am</li>
+                <li><a href="https://www.letras.mus.br/familia-worship/em-teu-nome/" target="_blank"> Em teu nome</a> - G</li>
+                <li><a href="https://www.letras.mus.br/soraya-moraes/cadeias-quebrar/" target="_blank"> Cadeias quebrar</a> - Em</li>
+                <li><a href="https://www.letras.mus.br/paulo-cesar-baruk/clamo-jesus/" target="_blank"> Clamo Jesus</a> - E</li>
+                <li><a href="https://www.cifraclub.com.br/ministerio-de-louvor-semear/na-uncao-de-deus-deus-dos-deuses-hino-da-vitoria/" target="_blank">Na unção de Deus + Deus dos deuses + Hino da vitória</a> - C</li>
+                <li><a href="https://www.letras.mus.br/ministerio-pedras-vivas/pai-nosso/" target="_blank">Pai nosso</a> - A</li>
+                <li><a href="https://www.letras.mus.br/vineyard/1134190/" target="_blank">Quebrantado</a> - C</li>
+                <li><a href="https://www.letras.mus.br/felipe-rodrigues/gratidao/" target="_blank"> Gratidão</a> - D</li>
+                <li><a href="https://www.letras.mus.br/marcos-witt/1477218/" target="_blank">Graças</a> - Bm</li>
+                <li>Digno de honra - G ??</li>
+                <li><a href="https://www.letras.mus.br/renascer-praise/856021/" target="_blank">Eu me rendo</a> - G</li>
+                <li><a href="https://www.letras.mus.br/comunidade-de-nilopolis/189939/" target="_blank">Aquele que está feliz</a> - G</li>
+                <li><a href="https://www.cifraclub.com.br/ministerio-morada/medley-adoracao-meu-prazer-consagracao-aclame-ao-senhor/#capo=0&key=7" target="_blank"> Meu prazer + Consagração + Aclame ao Senhor</a> - E</li>
+                <li><a href="https://www.letras.mus.br/vigilia-attos2/unico-que-ele-cresca/" target="_blank">Único + Que Ele cresça</a> - G</li>
+                <li><a href="https://www.letras.mus.br/fernanda-brum/o-que-tua-gloria-fez-comigo/" target="_blank">O que tua glória fez comigo</a> + <a href="https://www.letras.mus.br/deigma-marques/1893020/">Que Ele cresça</a> - G</li>
+                <li><a href="https://www.letras.mus.br/ronaldo-bezerra/324329/" target="_blank">Tú És Santo</a> - F</li>
+                <li><a href="https://www.letras.mus.br/aline-barros/127758/" target="_blank">Digno é o Senhor</a> - E</li>
+                <li><a href="https://www.letras.mus.br/drops-ina/e-ele/" target="_blank">É ele</a> - D</li>
+                <li><a href="https://www.letras.mus.br/ana-nobrega/oh-quao-lindo-esse-nome-e-what-a-beautiful-name/" target="_blank">Hó quão lindo esse nome é</a> - D</li>
+                <li><a href="https://www.letras.mus.br/phedro-souza/tu-es/" target="_blank">Tu és</a> - D</li>
+                <li><a href="https://www.letras.mus.br/gabriel-guedes/nada-mais/" target="_blank">Nada mais</a> - D</li>
+                <li><a href="https://www.letras.mus.br/renascer-praise/escape/" target="_blank">Escape</a> - C</li>
+                <li><a href="https://www.letras.mus.br/valesca-mayssa/inflama/">Inflama</a> - E</li>
+                <li><a href="https://www.letras.mus.br/ministerio-som-do-ceu/bom-perfume-manancial-bondade-de-deus/">Bom perfume + Manancial</a> - D</li>
+                <li><a href="https://www.letras.mus.br/thamires-garcia/ate-que-ele-venha-e-chova-justica/" target="_blank">Até que Ele venha</a> + <a href="https://www.letras.mus.br/aline-barros/1773591/" target="_blank">Rendido estou</a> - </li>
 
                
             </ul>
