Crei mais uma pasta

--- a/Louvor dia 30/louvor-dia-30-index.html
+++ b/Louvor dia 30/louvor-dia-30-index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Louvores de sexta-feira</title>
-    <link rel="stylesheet" href="louvor-sexta-style.css">
-    <link rel="stylesheet" href="">
-    <link rel="shorcut icon" href="Imagens/favicon-32x32.png">
+    <link rel="stylesheet" href="louvordia30-style.css">
+   
+    <link rel="shorcut icon" href="Imagem/favicon-32x32.png">
+
     <script src="https://kit.fontawesome.com/a22f6dd2f8.js" crossorigin="anonymous"></script>
   
 </head>
 <body>
     <main>
         <div class="container">
-            <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (23)</h1>
+            <img src="Imagem/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
+            <h1 class="titulo">Louvores de sexta-feira (30)</h1>
+            <link rel="stylesheet" href="louvordia30-style.css">
 
         </div>
         <div class="container-musicas">
             
-            <!--<div class="menu">
+            <div class="menu">
 
             <div class="musica1"><a href="https://www.letras.mus.br/soraya-moraes/caminho-no-deserto-way-maker/" target="_blank">Caminho no deserto</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/nivea-soares/caminho-no-deserto/#key=0" target="_blank" class="tom">Am</a></p><br>
 
@@ -38,7 +40,7 @@
                 https://www.letras.mus.br/paulo-cesar-baruk/clamo-jesus/" target="_blank">Clamo Jesus</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/paulo-cesar-baruk/clamo-jesus/" target="_blank" class="tom">G</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=ye9caqETC0A" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div><!-->
+               </div>
 
                </main>
                </body>
