--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -81,14 +81,21 @@
         <div class="Pr-Kelton">
             <h1 class="titulo">Pr Kelton</h1>
             <ul>
-                <li>O fogo arderá sobre o altar - Am</li>
-                <li>Pode morar aqui - E</li>
-                <li>Eu navegarei - Am</li>
-                <li>Irmão amados (harpa 175) - D</li>
-                <li>Eu tenho você</li>
-                <li> Portões celestiais</li>
-                <li> Santo pra sempre</li>
-                <li> Se Cristo comigo vai</li>
+                <li><a href="https://www.letras.mus.br/alexsander-lucio/o-fogo-ardera/">O fogo arderá sobre o altar</a> - Am</li>
+                <li><a href="https://www.letras.mus.br/theo-rubia/pode-morar-aqui/">Pode morar aqui</a> - E</li>
+                <li><a href="https://www.letras.mus.br/gabriela-rocha/eu-navegarei/">Eu navegarei</a> - Am</li>
+                <li><a href="https://www.letras.mus.br/harpa-crista/451086/">Irmãos amados (harpa 175)</a> - D</li>
+                <li><a href="https://www.letras.com/incendiarios/eu-tenho-voce/">Eu tenho você</a></li>
+                <li><a href="https://www.letras.mus.br/rose-nascimento/351877/">Portões celestiais</a></li>
+                <li><a href="https://www.letras.mus.br/fernandinho/pra-sempre/">Pra sempre</a></li>
+                <li><a href="https://www.letras.mus.br/harpa-crista/1771723/">Se Cristo comigo vai</a></li>
+                <li><a href="https://www.letras.mus.br/drops-ina/tudo-e-teu/">Tudo é Teu</a></li>
+                <li><a href="https://www.letras.mus.br/drops-ina/e-ele/">É ele</a></li>
+                <li><a href="https://www.letras.mus.br/quatro-por-um/1160828/">Espírito enche minha vida</a></li>
+                <li><a href="https://www.letras.mus.br/soraya-moraes/caminho-no-deserto-way-maker/">Caminho no deserrto</a></li>
+                <li><a href="https://www.letras.mus.br/harpa-crista/357600/">Conversão (Harpa 15)</a></li>
+                <li><a href="https://www.letras.mus.br/fernandinho/392435/">Te adorar</a></li>
+                <li><a href="https://www.letras.mus.br/julliany-souza/como-na-primeira-vez-eu-navegarei-pot-pourri-part-ricardinho/">Como na primeira vez + Eu navegarei</a></li>
             </ul>
             
      </div>
