--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -21,9 +21,9 @@
             
            <div class="menu">
 
-            <div class="musica1"><a href="https://www.letras.mus.br/soraya-moraes/caminho-no-deserto-way-maker/" target="_blank">Caminho no deserto</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/nivea-soares/caminho-no-deserto/#key=0" target="_blank" class="tom">Am</a></p><br>
+            <div class="musica1"><a href="https://www.letras.mus.br/soraya-moraes/grande-e-o-meu-deus/" target="_blank">Quão grande é meu Deus</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
 
-           <div><a href="https://www.youtube.com/watch?v=n3qTisl_Unk" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
+           <div><a href="https://www.youtube.com/watch?v=IT827htf_S8" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
             </div>
 
