--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (30)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (13)</h1>
 
         </div>
         <div class="container-musicas">
             
            <div class="menu">
 
-            <div class="musica1"><a href="https://www.letras.mus.br/gabriela-rocha/vida-aos-sepulcros-part-elevation-worship/" target="_blank">Vida aos sepulcros</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/gabriela-rocha/vida-aos-sepulcros-part-elevation-worship/" target="_blank" class="tom">E</a></p><br>
+            <!--<div class="musica1"><a href="https://www.letras.mus.br/gabriela-rocha/vida-aos-sepulcros-part-elevation-worship/" target="_blank">Vida aos sepulcros</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/gabriela-rocha/vida-aos-sepulcros-part-elevation-worship/" target="_blank" class="tom">E</a></p><br>
  
            <div><a href="https://www.youtube.com/watch?v=wfFTSbxyI1M" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -38,7 +38,7 @@
                https://www.letras.mus.br/eyshila/216083/" target="_blank">Fiel a mim</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/eyshila/fiel-mim/" target="_blank" class="tom">G</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=YpVOtGszqdM" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div>!-->
 
                </main>
                </body>
