--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -15,6 +15,10 @@
         <div class="Josi">
             <h1 class="titulo">Josi</h1>
             <ul>
+                <li>Nos braços do Pai - Bb</li>
+                <li>Abraça-me - G</li>
+                <li>Me ama - A</li>
+                <li>Poderoso Deus - G</li>
                 <li>Na terra como no céu G</li>
                 <li>Lindo momento E</li>
                 <li>Até te encontrar A</li>
@@ -164,6 +168,10 @@
                <li> Clamo Jesus - E</li>
                 <li> Meu amado - Bm</li>
                 <li>Jó - G</li>
+                <li>Até te encontrar</li>
+                <li>Só quero ver você</li>
+                <li>Ruja o leão - A</li>
+               
             </ul>    
      </div>
         </div>
