--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <tr>
                     <td>Sexta (20)</td>
                     <td>Kétanny</td>
-                    <td>Josi Anny Jenifer</td>
+                    <td>Josi Anny Jenifer Sarah</td>
                     <td>-</td>
                     <td>Diego</td>
                     <td>-</td>
