Troca de músicas

--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -93,13 +93,16 @@
                 <li><a href="https://www.letras.mus.br/rose-nascimento/351877/">Portões celestiais</a></li>
                 <li><a href="https://www.letras.mus.br/fernandinho/pra-sempre/">Pra sempre</a></li>
                 <li><a href="https://www.letras.mus.br/harpa-crista/1771723/">Se Cristo comigo vai</a></li>
-                <li><a href="https://www.letras.mus.br/drops-ina/tudo-e-teu/">Tudo é Teu</a></li>
+                <li><a href="https://www.letras.mus.br/drops-ina/tudo-e-teu/">Tudo é Teu - A</a></li>
                 <li><a href="https://www.letras.mus.br/drops-ina/e-ele/">É ele</a></li>
                 <li><a href="https://www.letras.mus.br/quatro-por-um/1160828/">Espírito enche minha vida</a></li>
                 <li><a href="https://www.letras.mus.br/soraya-moraes/caminho-no-deserto-way-maker/">Caminho no deserrto</a></li>
                 <li><a href="https://www.letras.mus.br/harpa-crista/357600/">Conversão (Harpa 15)</a></li>
                 <li><a href="https://www.letras.mus.br/fernandinho/392435/">Te adorar</a></li>
                 <li><a href="https://www.letras.mus.br/julliany-souza/como-na-primeira-vez-eu-navegarei-pot-pourri-part-ricardinho/">Como na primeira vez + Eu navegarei</a></li>
+                <li><a href="https://www.letras.mus.br/harpa-crista/450141/">Breve verei - D</a></li>
+                <li><a href="https://www.letras.mus.br/gerson-rufino/eu-so-quero-adorar/">Eu só quero adorar - C</a></li>
+                <li><a href="https://www.letras.mus.br/aline-barros/127758/">Digno é o Senhor - G</a></li>
             </ul>
             
      </div>
