--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (04)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (11)</h1>
 
         </div>
         <div class="container-musicas">
             
            <div class="menu">
 
-            <div class="musica1"><a href="https://www.letras.mus.br/leandro-soares/todavia-me-alegrarei/" target="_blank">Todavia eu me alegrarei</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/samuel-messias/todavia-me-alegrarei/#key=10" target="_blank" class="tom">G</a></p><br>
+           <!-- <div class="musica1"><a href="https://www.letras.mus.br/leandro-soares/todavia-me-alegrarei/" target="_blank">Todavia eu me alegrarei</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/samuel-messias/todavia-me-alegrarei/#key=10" target="_blank" class="tom">G</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=K5ONBQtThxY&list=RDK5ONBQtThxY&start_radio=1" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -39,7 +39,7 @@
              https://www.letras.com/bruna-barbosa/quando-eu-chorar/" target="_blank">Quando eu chorar</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/bruna-karla/quando-eu-chorar/#key=10" target="_blank" class="tom">G</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=MFG25Y5rBjw&list=RDMFG25Y5rBjw&start_radio=1" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div>-->
 
                </main>
                </body>
