--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -15,6 +15,12 @@
         <div class="Josi">
             <h1 class="titulo">Josi</h1>
             <ul>
+                <li>Todavia me alegrarei - G</li>
+                <li>Vida aos sepulcros - E</li>
+                <li>Quando eu chorar - G</li>
+                <li>O encontro - C</li>
+                <li>Cançao que não envelhece - G#</li>
+                <li>Quem é como nosso Deus - G</li>
                 <li>Nos braços do Pai - Bb</li>
                 <li>Abraça-me - G</li>
                 <li>Me ama - A</li>
