Tirei um integrante das escala

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <tr>
                     <td>Sexta Congresso de missões (11)</td>
                     <td>Sarah</td>
-                    <td>Anny Jenifer</td>
+                    <td>Jenifer</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>-</td>
@@ -116,7 +116,7 @@
                     <td>-</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>João</td>
+                    <td>-</td>
                 </tr>
                 
                 <tr>
