--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -28,9 +28,9 @@
                 </div> 
 
 
-                <div class="musica2"><a href="https://www.letras.mus.br/alda-celia/168778/" target="_blank">A colheita</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <div class="musica2"><a href="https://www.letras.mus.br/julliany-souza/quem-e-esse/" target="_blank">Quem é esse?</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
 
-                    <div class="icon"> <a href="https://www.youtube.com/watch?v=uQ8G7hU-w0A&list=RDuQ8G7hU-w0A&start_radio=1" target="_blank" class="link"><i class="fa-brands fa-youtube"></a></i></div>
+                    <div class="icon"> <a href="https://www.youtube.com/watch?v=0ZF5em0MTwY&list=RD0ZF5em0MTwY&start_radio=1" target="_blank" class="link"><i class="fa-brands fa-youtube"></a></i></div>
                    </div>
 
                    <!--<div class="musica3"><a href="https://www.letras.mus.br/julliany-souza/cancao-que-nao-envelhece-part-lukas-agustinho/" target="_blank">Canção que não envelhece</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/julliany-souza/cancao-que-nao-envelhece-part-lukas-agustinho/" target="_blank" class="tom">G#</a></p>
