--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
                 
                 <tr>
                     <td>Domingo (20)</td>
-                    <td>Pr Keltom</td>
                     <td>Josi</td>
+                    <td>-</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>-</td>
+                    <td>Pr Kelton</td>
                 </tr>
                 
                 <tr>
