--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -28,7 +28,7 @@
                 </div> 
 
 
-                <div class="musica2"><a href="" target="_blank">Único + Que Ele cresça + O que sua glória fez comigo</a><p class="nome">Tom<a href="" target="_blank" class="tom">G</a></p>
+                <div class="musica2"><a href="https://www.letras.mus.br/vigilia-attos2/unico-que-ele-cresca/" target="_blank">Único + Que Ele cresça + O que sua glória fez comigo</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/banda-atos2/medley-unico-que-ele-cresca/" target="_blank" class="tom">G</a></p>
 
                     <div class="icon"> <a href="https://www.youtube.com/watch?v=updMXbra3sw&list=RDupdMXbra3sw&start_radio=1" target="_blank" class="link"><i class="fa-brands fa-youtube"></a></i></div>
                    </div>
