Musicas do dia 27

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,10 +14,10 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (11)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (25)</h1>
 
         </div>
-        <div class="container-musicas">
+       <!-- <div class="container-musicas">
             
            <div class="menu">
 
@@ -41,5 +41,5 @@
                  <div><a href="https://www.youtube.com/watch?v=xcC3Xh3PFcE&list=RDxcC3Xh3PFcE&start_radio=1" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
 
-               </main>
+               </main>-->
                </body>
