--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <ul class="menu">
     <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (11)</a></li>
-    <li><a href="Louvor dia 12/Louvor dia 12-index.html" target="_blank">Louvores de sábado dia (12)</a></li>
+    <!--<li><a href="Louvor dia 12/Louvor dia 12-index.html" target="_blank">Louvores de sábado dia (12)</a></li>!-->
     <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (13)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li></ul>
 
