--- a/index.html
+++ b/index.html
@@ -122,23 +122,23 @@
                 <tr>
                     <td>Sexta (25)</td>
                     <td>Sarah</td>
-                    <td>Jenifer Josi</td>
+                    <td>Jenifer Josi Pr Kelton</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>Pr Kelton</td>
+                    <td>Estevão</td>
                 </tr>
 
                 <tr>
                     <td>Domingo (27)</td>
                     <td>Jenifer</td>
-                    <td>Sarah Josi</td>
+                    <td>Sarah Josi Pr Kelton</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>Pr Kelton</td>
+                    <td>Estevão</td>
                 </tr>
 
               
