--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -31,7 +31,7 @@
 
             <div class="musica2"><a href="https://www.letras.mus.br/nivea-soares/quem-e-como-nosso-deus/" target="_blank">Quem é como nosso Deus</a><p class="nome">Tom<a href="" target="_blank" class="tom">&#129322</a></p><br>
                
-               <div><a href="https://www.letras.mus.br/nivea-soares/quem-e-como-nosso-deus/" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
+               <div><a href="https://www.youtube.com/watch?v=QRilv78Rroc&list=RDQRilv78Rroc&start_radio=1" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
                </div>
 
