Atualizei os tons

--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -120,7 +120,13 @@
     <ul><li>
         <a href="https://www.letras.mus.br/gabriela-rocha/eu-navegarei/" target="_blank">Eu navegarei</a> - Em</li>
                 <li><a href="https://www.cifraclub.com.br/felipe-rodrigues/tudo-e-perda/letra/" target="_blank">Tudo é perda</a> - C </li>
+
+                <li><a href="https://www.letras.mus.br/fernanda-ferro/digno-de-tudo/" target="_blank">Digno de tudo</a> - D</li>
+
                 <li><a href="https://www.cifraclub.com.br/ana-nobrega/oceanos-rendido-estou/" target="_blank">Oceanos + Rendido estou</a> - C</li>
+
+                <li><a href="https://www.letras.mus.br/gabriela-rocha/teu-santo-nome/">Teu Santo Nome</a> + <a href="https://www.letras.mus.br/david-quinlan/1227051/" target="_blank">Agnus Dei - D</a></li>
+
                 <li><a href="https://www.cifraclub.com.br/nivea-soares/os-que-esperam/letra/" target="_blank">Os que esperam</a> - D</li>
                 <li><a href="https://www.letras.mus.br/bruna-olly/vem-espirito-de-deus/" target="_blank">Vem Espírito de Deus</a> - E</li>
                 <li><a href="https://www.letras.mus.br/ludmila-ferber/287921/" target="_blank">Sopra Espírito</a> - E</li>
@@ -180,6 +186,9 @@
                 <li>Até te encontrar</li>
                 <li>Só quero ver você</li>
                 <li>Ruja o leão - A</li>
+                <li><a href="https://www.letras.mus.br/fernanda-brum/552118/" target="_blank">Jesus, meu primeiro amor - A</a></li>
+                <li><a href="https://www.letras.com/ana-paula-valadao/me-ama/" target="_blank">Me ama - A</a></li>
+                <li><a href="https://www.letras.mus.br/nivea-soares/quem-e-como-nosso-deus/" target="_blank">Quem é como nosso Deus? - F</a></li>
                
             </ul>    
      </div>
