--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -33,7 +33,7 @@
                     <div class="icon"> <a href="https://www.youtube.com/watch?v=3SEz_SemHtk&list=RD3SEz_SemHtk&start_radio=1" target="_blank" class="link"><i class="fa-brands fa-youtube"></a></i></div>
                    </div>
 
-                   <div class="musica3"><a href="https://www.letras.mus.br/gabriela-rocha/teu-santo-nome/" target="_blank">Teu Santo nome</a> + <a href="https://www.letras.mus.br/david-quinlan/1227051/" target="_blank">Agnus Dei</a><p class="nome">Tom<a href="" target="_blank" class="tom">&#129300</a></p>
+                   <div class="musica3"><a href="https://www.letras.mus.br/gabriela-rocha/teu-santo-nome/" target="_blank">Teu Santo nome</a> + <a href="https://www.letras.mus.br/david-quinlan/1227051/" target="_blank">Agnus Dei</a><p class="nome">Tom<a href="https://www.cifraclub.com/adoradores/teu-santo-nome/#key=2" target="_blank" class="tom">D</a></p>
                     
                         <div class="icon"> <a href="https://www.youtube.com/watch?v=Zy0Yg7Y9b-o&list=RDZy0Yg7Y9b-o&start_radio=1" target="_blank" class="link"><i class="fa-brands fa-youtube"></a></i></div>
                     </div>
