correção na escala

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
                  <tr>
                     <td>Sexta (29)</td>
-                    <td>Jenifer</td>
-                    <td>Sarah Josi Pr Kelton</td>
+                    <td>Sarah</td>
+                    <td>Josi Pr Kelton</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>-</td>
@@ -146,7 +146,7 @@
                 <tr>
                     <td>Domingo (31)</td>
                     <td>Pr Kelton</td>
-                    <td>Sarah Josi Jenifer</td>
+                    <td>Sarah Josi</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>-</td>
