Alteração de escala

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
                 <tr>
                     <td>Domingo (10) Missões</td>
-                    <td>Sarah</td>
-                    <td>Josi Jenifer Pr Kelton</td>
+                    <td>Jenifer</td>
+                    <td>Sarah Josi Pr Kelton</td>
                     <td>-</td>
                     <td>Diego</td>
                     <td>-</td>
@@ -90,8 +90,8 @@
                 
                 <tr>
                     <td>Sexta (15)</td>
-                    <td>Josi</td>
-                    <td>Jenifer Pr Kelton Sarah</td>
+                    <td>Sarah</td>
+                    <td>Jenifer Pr Kelton Josi</td>
                     <td>-</td>
                     <td>Diego</td>
                     <td>-</td>
@@ -101,8 +101,8 @@
                 
                 <tr>
                     <td>Domingo (17) culto no parque</td>
-                    <td>Jenifer</td>
-                    <td>Pr Kelton Sarah </td>
+                    <td>-</td>
+                    <td>-</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>-</td>
