--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (01)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (08)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
 
-          <div class="musica1"><a href="https://www.letras.mus.br/amanda-wanessa/ta-chorando-por-que/" target="_blank">Ta chorando por quê</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
+          <!--<div class="musica1"><a href="https://www.letras.mus.br/amanda-wanessa/ta-chorando-por-que/" target="_blank">Ta chorando por quê</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=wUNUWK_zpvs&list=RDwUNUWK_zpvs&start_radio=1" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
