--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <nav>
     
     <ul class="menu">
-    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (01)</a></li>
+    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (08)</a></li>
     <!--<li><a href="Louvor dia 12/Louvor dia 12-index.html" target="_blank">Louvores de sábado dia (12)</a></li>!-->
-    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (03)</a></li>
+    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (10)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li></ul>
 
 </nav>
@@ -77,8 +77,8 @@
 
                 <tr>
                     <td>Domingo (10) Missões</td>
-                    <td>Jenifer</td>
-                    <td>Sarah Josi Pr Kelton</td>
+                    <td>Josi</td>
+                    <td>Sarah Jenifer Pr Kelton</td>
                     <td>-</td>
                     <td>Diego</td>
                     <td>-</td>
@@ -123,8 +123,8 @@
 
                 <tr>
                     <td>Domingo (24)</td>
-                    <td>Pr Kelton</td>
-                    <td>Sarah Josi Jenifer</td>
+                    <td>Jenifer</td>
+                    <td>Sarah Josi Pr Kelton</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>-</td>
@@ -153,10 +153,6 @@
                     <td>Gustavo</td>
                     <td>Estevão</td>
                 </tr>
-
-
-
-              
 
             </tbody>
         </table>
