adicionei JS com função gerar conselho

--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
 <body>
     <header class="header">
        <div class="container-cabecalho"><img src="Imagem/android-chrome-192x192.png">
- <h1 class="titulo"><a href=""></a> Ministério de louvor - Libertai</h1> </div>  
+ <h1 class="titulo"><a href=""></a> Ministério de louvor - Libertai</h1>
+
+
 <nav>
     
     <ul class="menu">
     <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (08)</a></li>
     <!--<li><a href="Louvor dia 12/Louvor dia 12-index.html" target="_blank">Louvores de sábado dia (12)</a></li>!-->
     <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (10)</a></li>
-    <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li></ul>
+    <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li>
+    <li><button id="conselho" onclick="gerarConselho()">Conselho do dia</button></li></ul>
 
 </nav>
 </div> 
-   
+ 
     </header>
     <section class="escala">
         <div class="tabela">
@@ -160,6 +163,6 @@
     </section>
     
 
- 
+ <script src="index.js"></script>
 </body>
 </html>
