--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
        <div class="container-cabecalho"><img src="Imagem/android-chrome-192x192.png">
- <h1 class="titulo"><a href=""></a> Ministério de louvor - Libertai</h1>
+ <h1 class="titulo"><a href=""></a> Ministério de louvor - Libertai</h1></div>
 
 
 <nav>
@@ -23,7 +23,8 @@
     <!--<li><a href="Louvor dia 12/Louvor dia 12-index.html" target="_blank">Louvores de sábado dia (12)</a></li>!-->
     <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (10)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li>
-    <li><button id="conselho" onclick="gerarConselho()">Conselho do dia</button></li></ul>
+    <li><a href=""><button id="conselho" onclick="gerarConselho()">Conselho do dia</button></a></li>
+</ul>
 
 </nav>
 </div> 
