--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--<li><a href="Louvor dia 12/Louvor dia 12-index.html" target="_blank">Louvores de sábado dia (12)</a></li>!-->
     <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (10)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li>
-    <li><a href=""><button id="conselho" onclick="gerarConselho()">Conselho do dia</button></a></li>
+    <!--<li><button id="conselho" onclick="gerarConselho()">Conselho do dia</button></li><!-->
 </ul>
 
 </nav>
