--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <nav>
     
     <ul class="menu">
-    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (08)</a></li>
+    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (15)</a></li>
     <!--<li><a href="Louvor dia 12/Louvor dia 12-index.html" target="_blank">Louvores de sábado dia (12)</a></li>!-->
-    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (10)</a></li>
+    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (17)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li>
-    <!--<li><button id="conselho" onclick="gerarConselho()">Conselho do dia</button></li><!-->
+    <li><button id="conselho" onclick="gerarConselho()">Conselho do dia</button></li>
 </ul>
 
 </nav>
