--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--<li><a href="Louvor dia 12/Louvor dia 12-index.html" target="_blank">Louvores de sábado dia (12)</a></li>!-->
     <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (17)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li>
-    <li><button id="conselho" onclick="gerarConselho()">Conselho do dia</button></li>
+    <li><button id="conselho" onclick="gerarConselho()">Mensagem do dia</button></li>
 </ul>
 
 </nav>
@@ -104,9 +104,9 @@
                 </tr>
                 
                 <tr>
-                    <td>Domingo (17) culto no parque</td>
-                    <td>-</td>
-                    <td>-</td>
+                    <td>Domingo (17)</td>
+                    <td>Jenifer</td>
+                    <td>Sarah Pr Kelton Josi Sarah</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>-</td>
