--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -28,7 +28,7 @@
                 </div> 
 
 
-                <div class="musica2"><a href="https://www.letras.mus.br/julliany-souza/quem-e-esse/" target="_blank">Quem é esse + </a><a href="https://www.letras.mus.br/drops-ina/e-ele/" target="_blank">É Ele</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/julliany-souza/quem-e-esse/#key=10" target="_blank" class="tom">G<a href="https://www.cifraclub.com.br/drops-gl-adolescentes/e-ele/#capo=0" target="_blank" class="tom">G</a></a></p>
+                <div class="musica2"><a href="https://www.letras.mus.br/julliany-souza/quem-e-esse/" target="_blank">Quem é esse + </a><a href="https://www.letras.mus.br/drops-ina/e-ele/" target="_blank">É Ele</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/julliany-souza/quem-e-esse/#key=5" target="_blank" class="tom">D<a href="https://www.cifraclub.com.br/drops-gl-adolescentes/e-ele/#capo=0&key=5" target="_blank" class="tom">D</a></a></p>
 
                     <div class="icon"> <a href="https://www.youtube.com/watch?v=0ZF5em0MTwY" target="_blank" class="link"><i class="fa-brands fa-youtube"></a></i></div>
                      <div class="icon"> <a href="https://www.youtube.com/watch?v=L3b2gRB7YVc" target="_blank" class="link"><i class="fa-brands fa-youtube"></a></i></div>
@@ -41,9 +41,9 @@
 
 
 
-                      <div class="musica4"><a href="https://www.letras.mus.br/felipe-rodrigues/melhor-lugar/" target="_blank">Melhor lugar</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                     <div class="musica4"><a href="https://www.letras.mus.br/felipe-rodrigues/gratidao/" target="_blank">Gratidão</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/felipe-rodrigues/gratidao/" target="_blank" class="tom">D</a></p>
                           
-                        <div class="icon"> <a href="https://www.youtube.com/watch?v=Co_TI8wcVkQ" target="_blank" class="link"><i class="fa-brands fa-youtube"></a></i></div>
+                        <div class="icon"> <a href="https://www.youtube.com/watch?v=3SEz_SemHtk" target="_blank" class="link"><i class="fa-brands fa-youtube"></a></i></div>
                         </div>
         
         </div>
