Alteração de músicas

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -14,14 +14,14 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (15)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (22)</h1>
 
         </div>
        <div class="container-musicas">
             
            <div class="menu">
 
-          <div class="musica1"><a href="https://www.letras.mus.br/mauro-henrique/em-teus-bracos/" target="_blank">Em Teus braços</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/mauro-henrique/em-teus-bracos/" target="_blank" class="tom">C</a></p><br>
+          <!--<div class="musica1"><a href="https://www.letras.mus.br/mauro-henrique/em-teus-bracos/" target="_blank">Em Teus braços</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/mauro-henrique/em-teus-bracos/" target="_blank" class="tom">C</a></p><br>
 
            <div><a href="https://www.youtube.com/watch?v=IxpWNuxGmzc" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
                </div>
@@ -39,7 +39,7 @@
              https://www.letras.mus.br/alexsander-lucio/o-fogo-ardera/" target="_blank">O fogo arderá</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/alexsander-lucio/o-fogo-ardera/simplificada.html" target="_blank" class="tom">C</a></p><br>
                 
                  <div><a href="https://www.youtube.com/watch?v=Bqc6B5LzTN0" target="_blank" class="icon"><i class="fa-brands fa-youtube" class="icon"></i></a>
-               </div>
+               </div><!-->
 
                </main>
                </body>
