--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <nav>
     
     <ul class="menu">
-    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (15)</a></li>
+    <li><a href="Louvores-sexta/louvor-sexta.index.html" target="_blank">Louvores de sexta-feira (22)</a></li>
     <!--<li><a href="Louvor dia 12/Louvor dia 12-index.html" target="_blank">Louvores de sábado dia (12)</a></li>!-->
-    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (17)</a></li>
+    <li><a href="Louvores-domingo/domingo-index.html" target="_blank">Louvores de domingo (24)</a></li>
     <li><a href="Tons-favoritos/tons-index.html" target="_blank">Tons favoritos</a></li>
     <li><button id="conselho" onclick="gerarConselho()">Mensagem do dia</button></li>
 </ul>
@@ -122,7 +122,7 @@
                     <td>-</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>Estevão</td>
+                    <td>João</td>
                 </tr>
 
                 <tr>
@@ -133,7 +133,7 @@
                     <td>-</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>Estevão</td>
+                    <td>-</td>
                 </tr>
 
                  <tr>
