--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -15,6 +15,7 @@
         <div class="Josi">
             <h1 class="titulo">Josi</h1>
             <ul>
+                <li>Com muito louvor - A</li>
                 <li>Todavia me alegrarei - G</li>
                 <li>Vida aos sepulcros - E</li>
                 <li>Quando eu chorar - G</li>
